--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
 <body>
     <div class = parent>
         <div class = main>
-            <p>Параметры кредита</p>
-            <hr>
+            <div class = firstbox>
+                <h1>Параметры кредита</h1>
+                <hr>
+            </div>
+            <div class =  centertext>
+                <p>Cумма кредита: <input maxlength="15" size="20"></p>
+                <p>Срок кредита: <input maxlength="15" size="20"></p>
+                <p>Процентная ставка: <input maxlength="15" size="20"></p>
+                <p>Дополнительные параметры</p>
+                <p>Единовременные комиссии: <input maxlength="15" size="20"></p>
+                <p>Ежемесячные комиссии: <input maxlength="15" size="20"></p>
+                <p>Единовременные комиссии: <input maxlength="15" size="20"></p>
+                <p>Вид платежа: <input maxlength="15" size="20"></p>
+                <p>Начало выплат: <input maxlength="15" size="20"></p>      
         </div>
     </div>
 </body>
