--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css.css">
-    <!--<script src="script.js"></script>-->
     <title>Кредитный Калькулятор</title>
 </head>
 <body>
@@ -16,15 +15,17 @@
                 <hr>
             </div>
             <div class =  centertext>
-                <p>Cумма кредита: <input maxlength="15" size="20"></p>
-                <p>Срок кредита: <input maxlength="15" size="20"></p>
-                <p>Процентная ставка: <input maxlength="15" size="20"></p>
-                <p>Дополнительные параметры</p>
-                <p>Единовременные комиссии: <input maxlength="15" size="20"></p>
-                <p>Ежемесячные комиссии: <input maxlength="15" size="20"></p>
-                <p>Единовременные комиссии: <input maxlength="15" size="20"></p>
-                <p>Вид платежа: <input maxlength="15" size="20"></p>
-                <p>Начало выплат: <input maxlength="15" size="20"></p>      
+                <p class = "text">Cумма кредита:<input class = textbox maxlength="15" size="20"> </p>
+                <p class = "text">Срок кредита: <input class = textbox maxlength="15" size="20"></p>
+                <p class = "text">Процентная ставка: <input class = textbox maxlength="15" size="20"></p>
+                <div class = firstbox>
+                    <p>Дополнительные параметры</p>
+                </div>
+                <p class = "text">Единовременные комиссии: <input class = textbox maxlength="15" size="20"></p>
+                <p class = "text">Ежемесячные комиссии: <input class = textbox maxlength="15" size="20"></p>
+                <p class = "text">Единовременные комиссии: <input class = textbox maxlength="15" size="20"></p>
+                <p class = "text">Вид платежа: <input class = textbox maxlength="15" size="20"></p>
+                <p class = "text">Начало выплат: <input class = textbox maxlength="15" size="20"></p>  
         </div>
     </div>
 </body>
