--- a/index.html
+++ b/index.html
@@ -8,25 +8,104 @@
     <title>Кредитный Калькулятор</title>
 </head>
 <body>
-    <div class = parent>
-        <div class = main>
-            <div class = firstbox>
+    <div class = "parent">
+        <div class = "main">
+            <div class = "firstbox">
                 <h1>Параметры кредита</h1>
                 <hr>
             </div>
             <div class =  centertext>
-                <p class = "text">Cумма кредита:<input class = textbox maxlength="15" size="20"> </p>
-                <p class = "text">Срок кредита: <input class = textbox maxlength="15" size="20"></p>
-                <p class = "text">Процентная ставка: <input class = textbox maxlength="15" size="20"></p>
-                <div class = firstbox>
+                <div class = "field">
+                    <label class = "text">Cумма кредита:</label>
+                        <input class = "textbox" maxlength="15" size="20"> 
+                        <form action="">
+                            <select class = "forma" size="1">
+                                <option value="">грн</option>
+                                <option value="">$</option>
+                                <option value="">€</option>
+                            </select>
+                        </form>
+                </div>
+                <div class = "field">
+                    <label class = "text">Срок кредита:</label> 
+                    <input class = "textbox" maxlength="15" size="20">
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">лет</option>
+                            <option value="">мес.</option>
+                        </select>
+                    </form>
+                </div>
+                <div class = "field">
+                    <label class = "text">Процентная ставка:</label> 
+                    <input class = "textbox" maxlength="15" size="20">
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">%в мес</option>
+                            <option value="">%в год</option>
+                        </select>
+                    </form>
+                </div>
+                <div class = nacl>
                     <p>Дополнительные параметры</p>
                 </div>
-                <p class = "text">Единовременные комиссии: <input class = textbox maxlength="15" size="20"></p>
-                <p class = "text">Ежемесячные комиссии: <input class = textbox maxlength="15" size="20"></p>
-                <p class = "text">Единовременные комиссии: <input class = textbox maxlength="15" size="20"></p>
-                <p class = "text">Вид платежа: <input class = textbox maxlength="15" size="20"></p>
-                <p class = "text">Начало выплат: <input class = textbox maxlength="15" size="20"></p>  
+                <div class = "field">
+                    <label class = "text">Единовременные комиссии:</label> 
+                    <input class = "textbox" maxlength="15" size="20">
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">% от суммы кредита</option>
+                            <option value="">фиксир. сумма</option>
+                        </select>
+                    </form>
+                </div>
+                <div class = "field">
+                    <label class = "text">Ежемесячные комиссии:</label> 
+                    <input class = "textbox" maxlength="15" size="20">
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">%от суммы кредита</option>
+                            <option value="">%от остатка долга</option>
+                            <option value="">Фикссир. сумма</option>
+                        </select>
+                    </form>
+                </div>
+                <div class = "field">
+                    <label class = "text">Вид платежа:</label> 
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">Ануитетный</option>
+                            <option value="">Дифферецированный</option>
+                        </select>
+                    </form>
+                </div>
+                <div class = "field">
+                    <label class = "text">Начало выплат:</label> 
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">Январь</option>
+                            <option value="">Февраль</option>
+                            <option value="">Март</option>
+                            <option value="">Апрель</option>
+                            <option value="">Май</option>
+                            <option value="">Июнь</option>
+                            <option value="">Июль</option>
+                            <option value="">Август</option>
+                            <option value="">Сентябрь</option>
+                            <option value="">Октабрь</option>
+                            <option value="">Ноябрь</option>
+                            <option value="">Декабрь</option>
+                        </select>
+                    </form>
+                    <form action="">
+                        <select class = "forma" size="1">
+                            <option value="">2022</option>
+                            <option value="">2023</option>
+                        </select>
+                    </form>
+                </div>
         </div>
+        
     </div>
 </body>
 </html>
