--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </select>
                     </form>
                 </div>
-                <div class = "field">
+                <div class = "section">
                     <label class = "text">Вид платежа:</label> 
                     <form action="">
                         <select class = "forma" size="1">
@@ -103,6 +103,9 @@
                             <option value="">2023</option>
                         </select>
                     </form>
+                </div>
+                <div class="button">
+                    <button>Посчитать</button>
                 </div>
         </div>
         
