--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class =  centertext>
                 <div class = "field">
                     <label class = "text">Cумма кредита:</label>
-                        <input class = "textbox" maxlength="15" size="20"> 
+                        <input class = "StringSumOfCredit" maxlength="15" size="20"> 
                         <form action="">
                             <select class = "forma" size="1">
                                 <option value="">грн</option>
@@ -28,7 +28,7 @@
                 </div>
                 <div class = "field">
                     <label class = "text">Срок кредита:</label> 
-                    <input class = "textbox" maxlength="15" size="20">
+                    <input class = "StringTerminOfCredit" maxlength="15" size="20">
                     <form action="">
                         <select class = "forma" size="1">
                             <option value="">лет</option>
@@ -38,7 +38,7 @@
                 </div>
                 <div class = "field">
                     <label class = "text">Процентная ставка:</label> 
-                    <input class = "textbox" maxlength="15" size="20">
+                    <input class = "StringPercentOfCredit" maxlength="15" size="20">
                     <form action="">
                         <select class = "forma" size="1">
                             <option value="">%в мес</option>
