--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div>
                 <div class = "field">
                     <label class = "text">Единовременные комиссии:</label> 
-                    <input class = "textbox" maxlength="15" size="20">
+                    <input class = "StringOfComission" maxlength="15" size="20">
                     <form action="">
                         <select class = "forma" size="1">
                             <option value="">% от суммы кредита</option>
@@ -61,7 +61,7 @@
                 </div>
                 <div class = "field">
                     <label class = "text">Ежемесячные комиссии:</label> 
-                    <input class = "textbox" maxlength="15" size="20">
+                    <input class = "StringMounthComission" maxlength="15" size="20">
                     <form action="">
                         <select class = "forma" size="1">
                             <option value="">%от суммы кредита</option>
