--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <label class = "text">Cумма кредита:</label>
                         <input class = "StringSumOfCredit" maxlength="15" size="20"> 
                         <form action="">
-                            <select class = "forma" size="1">
-                                <option value="">грн</option>
-                                <option value="">$</option>
-                                <option value="">€</option>
+                            <select class = "Currency" size="1">
+                                <option value="uan">грн</option>
+                                <option value="doll">$</option>
+                                <option value="eur">€</option>
                             </select>
                         </form>
                 </div>
@@ -30,9 +30,9 @@
                     <label class = "text">Срок кредита:</label> 
                     <input class = "StringTerminOfCredit" maxlength="15" size="20">
                     <form action="">
-                        <select class = "forma" size="1">
-                            <option value="">лет</option>
-                            <option value="">мес.</option>
+                        <select class = "Termin" size="1">
+                            <option value="years">лет</option>
+                            <option value="month">мес.</option>
                         </select>
                     </form>
                 </div>
@@ -40,9 +40,9 @@
                     <label class = "text">Процентная ставка:</label> 
                     <input class = "StringPercentOfCredit" maxlength="15" size="20">
                     <form action="">
-                        <select class = "forma" size="1">
-                            <option value="">%в мес</option>
-                            <option value="">%в год</option>
+                        <select class = "Perc" size="1">
+                            <option value="PercentMonth">%в мес</option>
+                            <option value="PercentYear">%в год</option>
                         </select>
                     </form>
                 </div>
@@ -53,9 +53,9 @@
                     <label class = "text">Единовременные комиссии:</label> 
                     <input class = "StringOfComission" maxlength="15" size="20">
                     <form action="">
-                        <select class = "forma" size="1">
-                            <option value="">% от суммы кредита</option>
-                            <option value="">фиксир. сумма</option>
+                        <select class = "FirctComission" size="1">
+                            <option value="PercentFromCredit">% от суммы кредита</option>
+                            <option value="FixedPrice">фиксир. сумма</option>
                         </select>
                     </form>
                 </div>
@@ -63,26 +63,26 @@
                     <label class = "text">Ежемесячные комиссии:</label> 
                     <input class = "StringMounthComission" maxlength="15" size="20">
                     <form action="">
-                        <select class = "forma" size="1">
-                            <option value="">%от суммы кредита</option>
-                            <option value="">%от остатка долга</option>
-                            <option value="">Фикссир. сумма</option>
+                        <select class = "MonthComission" size="1">
+                            <option value="PercentFromCreditComm">%от суммы кредита</option>
+                            <option value="OutstandingDebt">%от остатка долга</option>
+                            <option value="FixedPriceComm">Фикссир. сумма</option>
                         </select>
                     </form>
                 </div>
                 <div class = "section">
                     <label class = "text">Вид платежа:</label> 
                     <form action="">
-                        <select class = "forma" size="1">
-                            <option value="">Ануитетный</option>
-                            <option value="">Дифферецированный</option>
+                        <select class = "PaymentType" size="1">
+                            <option value="Annuity">Ануитетный</option>
+                            <option value="differentiated">Дифферецированный</option>
                         </select>
                     </form>
                 </div>
                 <div class = "field">
                     <label class = "text">Начало выплат:</label> 
                     <form action="">
-                        <select class = "forma" size="1">
+                        <select class = "StartPaymentMonth" size="1">
                             <option value="">Январь</option>
                             <option value="">Февраль</option>
                             <option value="">Март</option>
@@ -98,7 +98,7 @@
                         </select>
                     </form>
                     <form action="">
-                        <select class = "forma" size="1">
+                        <select class = "StartPaymentYear" size="1">
                             <option value="">2022</option>
                             <option value="">2023</option>
                         </select>
