--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
                     <label class = "text">Начало выплат:</label> 
                     <form action="">
                         <select class = "StartPaymentMonth" size="1">
-                            <option value="">Январь</option>
-                            <option value="">Февраль</option>
-                            <option value="">Март</option>
-                            <option value="">Апрель</option>
-                            <option value="">Май</option>
-                            <option value="">Июнь</option>
-                            <option value="">Июль</option>
-                            <option value="">Август</option>
-                            <option value="">Сентябрь</option>
-                            <option value="">Октабрь</option>
-                            <option value="">Ноябрь</option>
-                            <option value="">Декабрь</option>
+                            <option value="1">Январь</option>
+                            <option value="2">Февраль</option>
+                            <option value="3">Март</option>
+                            <option value="4">Апрель</option>
+                            <option value="5">Май</option>
+                            <option value="6">Июнь</option>
+                            <option value="7">Июль</option>
+                            <option value="8">Август</option>
+                            <option value="9">Сентябрь</option>
+                            <option value="10">Октабрь</option>
+                            <option value="11">Ноябрь</option>
+                            <option value="12">Декабрь</option>
                         </select>
                     </form>
                     <form action="">
                         <select class = "StartPaymentYear" size="1">
-                            <option value="">2022</option>
-                            <option value="">2023</option>
+                            <option value="2022">2022</option>
+                            <option value="2023">2023</option>
                         </select>
                     </form>
                 </div>
