--- a/Result.html
+++ b/Result.html
@@ -10,11 +10,24 @@
 <body>
     <div class = "parent">
         <div class = "main">
-            <label class = "text">Сумма ежемесячного платежа:</label> 
-            <label class = "text">Переплата по процентам за кредит:</label> 
-            <label class = "text">Итоговая переплата с учетом комиссий:</label> 
-            <label class = "text">Эффективная процентная ставка:</label> 
+            <div class ="rows">
+                <label class = "text">Сумма ежемесячного платежа:</label>
+                <label class = "result">0</label>
+            </div>
+            <div class ="rows"> 
+                <label class = "text">Переплата по процентам за кредит:</label>
+                <label class = "result">0</label>
+            </div>
+            <div class ="rows"> 
+                <label class = "text">Итоговая переплата с учетом комиссий:</label> 
+                <label class = "result">0</label>
+            </div>
+            <div class ="rows">
+                <label class = "text">Эффективная процентная ставка:</label> 
+                <label class = "result">0</label>
+            </div>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
