--- a/Result.html
+++ b/Result.html
@@ -11,23 +11,23 @@
     <div class = "parent">
         <div class = "main">
             <div class ="rows">
+                <label class = "text">Сумма кредита:</label>
+                <label id = "SumOfCredit">0</label>
+            </div>
+            <div class ="rows"> 
                 <label class = "text">Сумма ежемесячного платежа:</label>
-                <label class = "result">0</label>
+                <label id = "MonthPayment">0</label>
             </div>
             <div class ="rows"> 
-                <label class = "text">Переплата по процентам за кредит:</label>
-                <label class = "result">0</label>
-            </div>
-            <div class ="rows"> 
-                <label class = "text">Итоговая переплата с учетом комиссий:</label> 
-                <label class = "result">0</label>
+                <label class = "text">Переплата за кредит:</label> 
+                <label id = "Overpayment">0</label>
             </div>
             <div class ="rows">
-                <label class = "text">Эффективная процентная ставка:</label> 
-                <label class = "result">0</label>
+                <label class = "text">Процентная ставка:</label> 
+                <label id = "Percent">0</label>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="Result.js"></script>
 </body>
 </html>
