--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p>Дополнительные параметры</p>
                 </div>
                 <div class = "field">
-                    <label class = "text">Единовременные комиссии:</label> 
+                    <label class = "text">Единовременная комиссия:</label> 
                     <input class = "StringOfComission" maxlength="15" size="20">
                     <form action="">
                         <select class = "FirctComission" size="1">
