--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                         <input class = "StringSumOfCredit" maxlength="15" size="20"> 
                         <form action="">
                             <select class = "Currency" size="1">
-                                <option value="uan">грн</option>
-                                <option value="doll">$</option>
-                                <option value="eur">€</option>
+                                <option value="UAH">грн</option>
+                                <option value="DOLLARS">$</option>
+                                <option value="EUROS">€</option>
                             </select>
                         </form>
                 </div>
