--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -3,10 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/css.css">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>My Company</title>
 </head>
 <body>
-    <p>Hello</p>
+    <header>
+        <div class="header___logo"><p>my company</p></div>
+        <!--Навигационное меню-->
+        <nav>
+            <div class="topnav" id="myTopnav">
+                <a href="">HOME</a>
+                <a href="">ABOUT</a>
+                <a href="">SERVISES</a>
+                <a href="">PORTFOLIO</a>
+                <a href="">TESTIMONIALS</a>
+                <a href="">CONTACT</a>
+                <!--Иконка бургер меню-->
+                <a href="" id="menu" class="icon">&#9776;</a>
+            </div>
+        </nav>
+    </header>
     <script src = "scripts/Script.js"></script>
 </body>
 </html>
