--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <header>
-        <div class="header___logo"><p>my company</p></div>
+        <div class="header___logo"><p>mycompany</p></div>
         <!--Навигационное меню-->
         <nav>
             <div class="topnav" id="myTopnav">
-                <a href="">HOME</a>
-                <a href="">ABOUT</a>
-                <a href="">SERVISES</a>
-                <a href="">PORTFOLIO</a>
-                <a href="">TESTIMONIALS</a>
-                <a href="">CONTACT</a>
+                <a href="#">HOME</a>
+                <a href="#">ABOUT</a>
+                <a href="#">SERVISES</a>
+                <a href="#">PORTFOLIO</a>
+                <a href="#">TESTIMONIALS</a>
+                <a href="#">CONTACT</a>
                 <!--Иконка бургер меню-->
-                <a href="" id="menu" class="icon">&#9776;</a>
+                <a href="#" id="menu" class="icon">&#9776;</a>
             </div>
         </nav>
     </header>
