--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/css.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
     <title>My Company</title>
 </head>
 <body>
@@ -23,6 +25,28 @@
             </div>
         </nav>
     </header>
+    <main>
+        <div class="main__welcome">
+            <h1>WELCOME ON <span class="mycompany" >MYCOMPANY</span></h1>
+            <p>We are a digital agency with <span class="text" >years of experience </span>and with <span class="text" >extraordinary people</span></p>
+        </div>
+        <div class="wrapper">
+            <div class="main__about">
+                <div class="about_left">
+                    <img src="Images/mac.png" alt="mac">
+                </div>
+                <div class="about_right">
+                    <h1>Some words <span class="RightText">about us</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus .</p>
+                    <ul>
+                        <li><span class="liText">Mission</span> - We deliver uniqueness and quality</li>
+                        <li><span class="liText">Skills</span> - Delivering fast and excellent results</li>
+                        <li><span class="liText">Clients</span> - Satisfied clients thanks to our experience</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </main>
     <script src = "scripts/Script.js"></script>
 </body>
 </html>
