--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=600, initial-scale=1">
     <link rel="stylesheet" href="css/css.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
@@ -33,7 +34,7 @@
         <div class="wrapper">
             <div class="main__about">
                 <div class="about_left">
-                    <img src="Images/mac.png" alt="mac">
+                    <img class="mw-100" src="Images/mac.png" alt="mac">
                 </div>
                 <div class="about_right">
                     <h1>Some words <span class="RightText">about us</span></h1>
