--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -47,6 +47,89 @@
                 </div>
             </div>
         </div>
+        <div class="main_team">
+            <div class="wrapper">
+            <h1>OUR TEAM</h1>
+            <div class="line"></div>
+                <div class="team_cards">
+                    <div class="card">
+                        <div class="photo"></div>
+                        <h4 class="name">Vlad Ivanov</h4>
+                        <p class="position">Designer</p>
+                        <p class="about_position">Do not seek to change what has come before. Seek to create that which has not.</p>
+                    </div>
+                    <div class="card">
+                        <div class="photo"></div>
+                        <h4 class="name">Bogdan Makarov</h4>
+                        <p class="position">Manager</p>
+                        <p class="about_position">Do not seek to change what has come before. Seek to create that which has not.</p>
+                    </div>
+                    <div class="card">
+                        <div class="photo"></div>
+                        <h4 class="name">Pavel Konov</h4>
+                        <p class="position">Copywriter</p>
+                        <p class="about_position">Do not seek to change what has come before. Seek to create that which has not.</p>
+                    </div>
+                    <div class="card">
+                        <div class="photo"></div>
+                        <h4 class="name">Max Belov</h4>
+                        <p class="position">SEO</p>
+                        <p class="about_position">Do not seek to change what has come before. Seek to create that which has not.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main_servises">
+            <div class="wrapper">
+                <h1>OUR SERVISES</h1>
+                <div class="line"></div>
+                <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.</i></p>
+                <div class="services_cards">
+                    <div class="servises_card">
+                        <img src="Images/WEBDESIGN.png" alt="web">
+                        <h4>WEB DESIGN</h4>
+                        <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    </div>
+                    <div class="servises_card">
+                        <img src="Images/Forma 1.png" alt="mobile">
+                        <h4>MOBILE APPS</h4>
+                        <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    </div>
+                    <div class="servises_card">
+                        <img src="Images/PHOTOGRAPHY.png" alt="photography">
+                        <h4>PHOTOGRAPHY</h4>
+                        <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    </div>
+                    <div class="servises_card">
+                        <img src="Images/MARKETING.png" alt="marketing">
+                        <h4>MARKETING</h4>
+                        <p>The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main_clients">
+            <h1>SOME OF <span class="client">OUR CLIENTS</span></h1>
+            <div class="line"></div>
+            <div class="clients">
+                <img src="Images/Chanel.png" alt="Chanel">
+                <img src="Images/zara.png" alt="zara">
+                <img src="Images/guerlain.png" alt="guerlain">
+                <img src="Images/Lancome.png" alt="Lancome">
+                <img src="Images/Lacoste.png" alt="Lacoste">
+            </div>
+        </div>
+
+
+
+        <div class="main_testimonials">
+            <h1><span class="client">our clients’</span> testimonials</h1>
+            <div class="line"></div>
+            <div class="testimonials">
+            <p class="upper">This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
+            <p class="ptext">Dean Martin,<span class="normal"> CEO Acme Inc.</span></p>
+        </div>
+        </div>
     </main>
     <script src = "scripts/Script.js"></script>
 </body>
