--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -165,9 +165,7 @@
                 <form action="#" name="newform" method="post">
                     <div class="form_imputs">
                         <p>Name <span class="red">*</span><input type="text"></p>
-                        
                         <p>Email address <span class="red">*</span><input type="text"></p>
-                      
                     </div>
                         <p>Message <span class="red">*</span></p>
                         <textarea name="text"></textarea>
@@ -178,6 +176,15 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="social">
+            <img src="Images/facebookfooter.png" alt="facebook">
+            <img src="Images/twitterfooter.png" alt="twitter">
+            <img src="Images/googlefooter.png" alt="google">
+            <img src="Images/linkedinfooter.png" alt="linkedin">
+            <img src="Images/dribbblefooter.png" alt="dribbble">
+        </div>
+    </footer>
     <script src = "scripts/Script.js"></script>
 </body>
 </html>
