--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=600, initial-scale=1">
-    <link rel="stylesheet" href="../css/css.css">
+    <link rel="stylesheet" href="Styles/css.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
@@ -185,6 +185,6 @@
             <img src="Images/dribbblefooter.png" alt="dribbble">
         </div>
     </footer>
-    <script src = "scripts/Script.js"></script>
+    <script src = "Scripts/Script.js"></script>
 </body>
 </html>
