--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -164,14 +164,16 @@
                     <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. </i></p>
                 </div>
                 <form action="#" name="newform" method="post">
-                    <div class="form_imputs">
-                        <p>Name <span class="red">*</span><input type="text"></p>
-                        <p>Email address <span class="red">*</span><input type="text"></p>
-                    </div>
-                        <p>Message <span class="red">*</span></p>
-                        <textarea name="text"></textarea>
-                        <div class="button_block">
-                            <input type="submit" value="SEND">
+                    <div class="forms">
+                        <div class="form_imputs">
+                            <div class="right"> <p>Name <span class="red">*</span><input type="text"></p></div>
+                            <div class="left"><p>Email address <span class="red">*</span><input type="text"></p></div>
+                        </div>
+                            <p>Message <span class="red">*</span></p>
+                            <textarea name="text"></textarea>
+                            <div class="button_block">
+                                <input type="submit" value="SEND">
+                            </div>
                         </div>
                 </form>
             </div>
