--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -16,7 +16,7 @@
         <!--Навигационное меню-->
         <nav>
             <div class="topnav" id="myTopnav">
-                <a href="#home" id="home">HOME</a>
+                <a href="#home">HOME</a>
                 <a href="#about">ABOUT</a>
                 <a href="#services">SERVISES</a>
                 <a href="#portfolio">PORTFOLIO</a>
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <main>
-        <div  class="main__welcome">
+        <div  id="home" class="main__welcome">
             <h1>WELCOME ON <span class="mycompany" >MYCOMPANY</span></h1>
             <p>We are a digital agency with <span class="text" >years of experience </span>and with <span class="text" >extraordinary people</span></p>
         </div>
@@ -155,10 +155,10 @@
                 <p class="ptext">Dean Martin,<span class="normal"> CEO Acme Inc.</span></p>
             </div>
         </div>
-        <section class="contact-form">
+        <section id="contact" class="contact-form">
             <div class="contact_wrapper">
                 <div class="contacts">
-                    <h1 id="contact">CONTACT US</h1>
+                    <h1>CONTACT US</h1>
                     <div class="line"></div>
                     <p><i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus ex quidem maiores ullam quis, at asperiores minus ad eaque maxime possimus cum ab iusto assumenda velit excepturi porro ipsa tenetur.Lorem ipsum dolor sit amet, consectetur adipisicing elit. </i></p>
                 </div>
