--- a/Portfolio/First WebSite/index.html
+++ b/Portfolio/First WebSite/index.html
@@ -11,6 +11,7 @@
     <title>My Company</title>
 </head>
 <body>
+    <div class="upward" onclick="scrollTopTop()"></div>
     <header>
         <div class="header___logo"><p>mycompany</p></div>
         <!--Навигационное меню-->
