--- a/Portfolio/Test Site for Alex Yanovsky/index.html
+++ b/Portfolio/Test Site for Alex Yanovsky/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <title>СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ ДЛЯ ПРЕДПРИНИМАТЕЛЕЙ</title>
  </head>
  <body>
@@ -97,7 +100,7 @@
       <div class="footersite"></div>
     </footer>
   </main>
-  <script src = "scripts/script.js"></script>
+  <!-- <script src = "scripts/script.js"></script> -->
  </body>
 </html>
 
