'adaptive-sec-block'

--- a/Portfolio/Test Yanovsky/index.html
+++ b/Portfolio/Test Yanovsky/index.html
@@ -50,23 +50,26 @@
     </section>
     <section>
       <div class="secondcontainer">
-        <div class="secondcontainerphoto"></p>
-            <div class="secondcontainertext"><p class="cera"><span class="bluespan">Удваивай прибыль и получай ключевые инструменты</span> для масштабирования<br> твоей компании уже этим летом!</p>
-        </div>
-        <div class="secondcontainerlist">
-            <ul class="secondcontainerlistul">
-                <li class="secondcontainerlistul"><p>определи ключевые факторы успеха в бизнесе</p></li>
-                <li class="secondcontainerlistul"><p>максимизируй отдачу от существующей клиентской базы</p></li>
-                <li class="secondcontainerlistul"><p>внедри инструменты для роста продаж</p></li>
-                <li class="secondcontainerlistul"><p>мотивируй команду работать со 100% отдачей</p></li>
-                <li class="secondcontainerlistul"><p>используй новейшие IT-решения для систематизации и роста бизнеса</p></li>
-                <li class="secondcontainerlistul"><p>масштабируй компанию на новые рынки</p></li>
-              </ul>
-        </div>
         <div class="hiddencontainer">
           <img class='mobilephototwo' src="images/Rectangle143.png" height="320px"></img>
         </div>
-        <button class='secondcontainerbutton' type="button" onclick="myFunction()"><span class="secondcontainerbuttonspan">Оставить заявку</span></button>
+        <div class="sec-block-text">
+            <div class="secondcontainertext">
+              <p class="cera"><span class="bluespan">Удваивай прибыль и получай ключевые инструменты</span> для масштабирования<br> твоей компании уже этим летом!</p>
+            </div>
+            <div class="secondcontainerlist">
+              <ul class="secondcontainerlistul">
+                  <li class="secondcontainerlistul"><p>определи ключевые факторы успеха в бизнесе</p></li>
+                  <li class="secondcontainerlistul"><p>максимизируй отдачу от существующей клиентской базы</p></li>
+                  <li class="secondcontainerlistul"><p>внедри инструменты для роста продаж</p></li>
+                  <li class="secondcontainerlistul"><p>мотивируй команду работать со 100% отдачей</p></li>
+                  <li class="secondcontainerlistul"><p>используй новейшие IT-решения для систематизации и роста бизнеса</p></li>
+                  <li class="secondcontainerlistul"><p>масштабируй компанию на новые рынки</p></li>
+                </ul>
+          </div>
+          <div>
+            <button class='secondcontainerbutton' type="button" onclick="myFunction()"><span class="secondcontainerbuttonspan">Оставить заявку</span></button>
+          </div>
       </div>
     </section>
     <section>
