'adaptive-third-block'

--- a/Portfolio/Test Yanovsky/index.html
+++ b/Portfolio/Test Yanovsky/index.html
@@ -74,6 +74,8 @@
     </section>
     <section>
       <div class="thirdcontainer">
+        <div class="block3-main">
+          <div class="block3-left">
         <div class="thirdcontainertextsec">
           <p>Только до 27.05.2022 при оплате<br>
           программы <span class="bluespanConteinertree">«Прибыль Х2» ты получишь:</span></p>
@@ -92,6 +94,8 @@
             <div class="imgcont"></div>
           </div>
         </div>
+      </div>
+      <div class="block3-right">
         <div class="thirdcontainerextern"><p>На тренинге тебя ждет:</p></div>
         <div class="thirdcontainerlist">
           <ul class="thirdcontainerlistul">
@@ -100,7 +104,11 @@
             <li class="thirdcontainerlistul">нетворкинг: минимум 40+ деловых контактов</li>
           </ul>
         </div>
+      </div>
+      </div>
+      <div class="block3-button">
         <button class='thirdcontainerbutton' type="button"><span class="thirdcontainerbuttonspan">Оставить заявку</span></button>
+      </div>
       </div>
     </section>
     <footer>
