--- a/Portfolio/Test Yanovsky/index.html
+++ b/Portfolio/Test Yanovsky/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html>
- <head>
+
+<head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <title>СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ ДЛЯ ПРЕДПРИНИМАТЕЛЕЙ</title>
- </head>
- <body>
-    <main>
-      <div class="popupwindow">
-        <h2>ЗАБРОНИРУЙ МЕСТО СЕЙЧАС</h2>
-        <form action="/action_page.php">
-          <input class='subs' type="text" id="fname" name="fname" placeholder="Name"><br>
-          <input class='subs' id="emailAddress" type="email" placeholder="E-mail"><br>
-          <input class='subs' placeholder='+38 (ххх) ххх-хх-хх' type="tel" id="phone" name="phone"
-              pattern="+[0-9]{2} ([0-9]{3}) [0-9]{3}-[0-9]{2}-[0-9]{2}"
-              required>
-          <input class='sub' type="submit" value="Оставить заявку"><br>
-          <p><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">  Соглашаюсь на рассылку от Alex Yanovsky</p>
-        </form>
-      </div>
-      <section>
-        <div class="mainfoto">
+</head>
+
+<body>
+  <main>
+    <div class="popupwindow">
+      <h2>ЗАБРОНИРУЙ МЕСТО СЕЙЧАС</h2>
+      <form action="/action_page.php">
+        <input class='subs' type="text" id="fname" name="fname" placeholder="Name"><br>
+        <input class='subs' id="emailAddress" type="email" placeholder="E-mail"><br>
+        <input class='subs' placeholder='+38 (ххх) ххх-хх-хх' type="tel" id="phone" name="phone"
+          pattern="+[0-9]{2} ([0-9]{3}) [0-9]{3}-[0-9]{2}-[0-9]{2}" required>
+        <input class='sub' type="submit" value="Оставить заявку"><br>
+        <p><input type="checkbox" id="vehicle1" name="vehicle1" value="Bike"> Соглашаюсь на рассылку от Alex Yanovsky
+        </p>
+      </form>
+    </div>
+    <section>
+      <div class="mainfoto">
         <div class="main-left-text">
           <div class="Main-text-title-div">
-        <div class="mainh1">
-            <h2 class="mainh1h2">СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ</h2>
-            <div class="mainProgram">
-                <p>ПРОГРАММА <span class="bluespan">"ПРИБЫЛЬ Х2"</span> + ONLINE-ТРЕНИНГ<span class="bluespan"> "СТРАТЕГИЯ РОСТА 5.0" В ПОДАРОК</span></p>
-                    <p><span class="mainh1span">с Алексеем Янковским </span></p>
-                    <div class="maintext"><p><span class="bluespan">Только до 27.05.2022!</span></p>
-                        <p>Подключайся к обучающей программе и участвуй<br>в тренинге с Алексом Яновским 1–3 июля <span class="bluespanandupper">БЕСПЛАТНО</span></p>
-                      </div>
-                        <button class='mainbutton' type="button"><span class="mainbuttonspan">Оставить заявку</span></button>
-                        <div class="mainphoto"></div>
-                      </div>
-                    </div>
+            <div class="mainh1">
+              <h2 class="mainh1h2">СПЕЦИАЛЬНОЕ ПРЕДЛОЖЕНИЕ</h2>
+              <div class="mainProgram">
+                <p>ПРОГРАММА <span class="bluespan">"ПРИБЫЛЬ Х2"</span> + ONLINE-ТРЕНИНГ<span class="bluespan">
+                    "СТРАТЕГИЯ РОСТА 5.0" В ПОДАРОК</span></p>
+                <p><span class="mainh1span">с Алексеем Янковским </span></p>
+                <div class="maintext">
+                  <p><span class="bluespan">Только до 27.05.2022!</span></p>
+                  <p>Подключайся к обучающей программе и участвуй<br>в тренинге с Алексом Яновским 1–3 июля <span
+                      class="bluespanandupper">БЕСПЛАТНО</span></p>
+                </div>
+                <button class='mainbutton' type="button"><span class="mainbuttonspan">Оставить заявку</span></button>
+                <div class="mainphoto"></div>
+              </div>
             </div>
+          </div>
         </div>
         <div class="hidden">
           <img class='mobilephoto' src="images/Rectangle84.png" height="300px"></img>
@@ -54,71 +59,88 @@
           <img class='mobilephototwo' src="images/Rectangle143.png" height="320px"></img>
         </div>
         <div class="sec-block-text">
-            <div class="secondcontainertext">
-              <p class="cera"><span class="bluespan">Удваивай прибыль и получай ключевые инструменты</span> для масштабирования<br> твоей компании уже этим летом!</p>
-            </div>
-            <div class="secondcontainerlist">
-              <ul class="secondcontainerlistul">
-                  <li class="secondcontainerlistul"><p>определи ключевые факторы успеха в бизнесе</p></li>
-                  <li class="secondcontainerlistul"><p>максимизируй отдачу от существующей клиентской базы</p></li>
-                  <li class="secondcontainerlistul"><p>внедри инструменты для роста продаж</p></li>
-                  <li class="secondcontainerlistul"><p>мотивируй команду работать со 100% отдачей</p></li>
-                  <li class="secondcontainerlistul"><p>используй новейшие IT-решения для систематизации и роста бизнеса</p></li>
-                  <li class="secondcontainerlistul"><p>масштабируй компанию на новые рынки</p></li>
-                </ul>
+          <div class="secondcontainertext">
+            <p class="cera"><span class="bluespan">Удваивай прибыль и получай ключевые инструменты</span>
+              для масштабирования<br> твоей компании уже этим летом!</p>
+          </div>
+          <div class="secondcontainerlist">
+            <ul class="secondcontainerlistul">
+              <li class="secondcontainerlistul">
+                <p>определи ключевые факторы успеха в бизнесе</p>
+              </li>
+              <li class="secondcontainerlistul">
+                <p>максимизируй отдачу от существующей клиентской базы</p>
+              </li>
+              <li class="secondcontainerlistul">
+                <p>внедри инструменты для роста продаж</p>
+              </li>
+              <li class="secondcontainerlistul">
+                <p>мотивируй команду работать со 100% отдачей</p>
+              </li>
+              <li class="secondcontainerlistul">
+                <p>используй новейшие IT-решения для систематизации и роста бизнеса</p>
+              </li>
+              <li class="secondcontainerlistul">
+                <p>масштабируй компанию на новые рынки</p>
+              </li>
+            </ul>
           </div>
           <div>
-            <button class='secondcontainerbutton' type="button" onclick="myFunction()"><span class="secondcontainerbuttonspan">Оставить заявку</span></button>
+            <button class='secondcontainerbutton' type="button" onclick="myFunction()"><span
+                class="secondcontainerbuttonspan">Оставить заявку</span></button>
           </div>
-      </div>
+        </div>
     </section>
     <section>
       <div class="thirdcontainer">
         <div class="block3-main">
           <div class="block3-left">
-        <div class="thirdcontainertextsec">
-          <p>Только до 27.05.2022 при оплате<br>
-          программы <span class="bluespanConteinertree">«Прибыль Х2» ты получишь:</span></p>
-        </div>
-        <div class="thirdcontainerdesk">
-          <p>2 месяца обучения по структурированной программе «Прибыль Х2» с разбором твоих ситуаций в бизнесе лично с Алексом Яновским</p>
-          <div class="imagecontainercurency">
-            <div class="imgconteinerthree"></div>
-            <div class="imgconteinerthre"></div>
+            <div class="thirdcontainertextsec">
+              <p>Только до 27.05.2022 при оплате<br>
+                программы <span class="bluespanConteinertree">«Прибыль Х2» ты получишь:</span></p>
+            </div>
+            <div class="thirdcontainerdesk">
+              <p>2 месяца обучения по структурированной программе «Прибыль Х2» с разбором твоих ситуаций в бизнесе лично
+                с Алексом Яновским</p>
+              <div class="imagecontainercurency">
+                <div class="imgconteinerthree"></div>
+                <div class="imgconteinerthre"></div>
+              </div>
+            </div>
+            <div class="thirdcontainerdesktwo">
+              <p>3 дня online-тренинга «Стратегия роста 5.0» с Алексом и ТОПами холдинга Х100</p>
+              <div class="imagecontainercurency">
+                <div class="imgconts"></div>
+                <div class="imgcont"></div>
+              </div>
+            </div>
+          </div>
+          <div class="block3-right">
+            <div class="thirdcontainerextern">
+              <p>На тренинге тебя ждет:</p>
+            </div>
+            <div class="thirdcontainerlist">
+              <ul class="thirdcontainerlistul">
+                <li class="thirdcontainerlistul">разбор всех 50 элементов системы управления и масштабирования с Алексом
+                </li>
+                <li class="thirdcontainerlistul">выступления ТОПов по ключевым инструментам повышения прибыли в бизнесе:
+                  управление, маркетинг, сервис, доставка</li>
+                <li class="thirdcontainerlistul">нетворкинг: минимум 40+ деловых контактов</li>
+              </ul>
+            </div>
           </div>
         </div>
-        <div class="thirdcontainerdesktwo">
-          <p>3 дня online-тренинга «Стратегия роста 5.0» с Алексом и ТОПами холдинга Х100</p>
-          <div class="imagecontainercurency">
-            <div class="imgconts"></div>
-            <div class="imgcont"></div>
-          </div>
+        <div class="block3-button">
+          <button class='thirdcontainerbutton' type="button"><span class="thirdcontainerbuttonspan">Оставить
+              заявку</span></button>
         </div>
-      </div>
-      <div class="block3-right">
-        <div class="thirdcontainerextern"><p>На тренинге тебя ждет:</p></div>
-        <div class="thirdcontainerlist">
-          <ul class="thirdcontainerlistul">
-            <li class="thirdcontainerlistul">разбор всех 50 элементов системы управления и масштабирования с Алексом</li>
-            <li class="thirdcontainerlistul">выступления ТОПов по ключевым инструментам повышения прибыли в бизнесе: управление, маркетинг, сервис, доставка</li>
-            <li class="thirdcontainerlistul">нетворкинг: минимум 40+ деловых контактов</li>
-          </ul>
-        </div>
-      </div>
-      </div>
-      <div class="block3-button">
-        <button class='thirdcontainerbutton' type="button"><span class="thirdcontainerbuttonspan">Оставить заявку</span></button>
-      </div>
       </div>
     </section>
     <footer>
       <div class="footersite"></div>
     </footer>
   </main>
-  <!-- <script src = "scripts/script.js"></script> -->
- </body>
+  <script src="scripts/script.js"></script>
+</body>
+
 </html>
-
-
-
-
